# SE4

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Rule&Todo.md
cmake/: FindFMOD.cmake  FindSDL2.cmake  FindSDL2_image.cmake
include/: EngineConfig.h  EngineConfig.h.in  library.h  se4.hpp
include/audio/: Audio.h
include/camera/: camera.h
include/component/: Cam.h  Component.hpp  ComponentHandle.hpp  ComponentManager.hpp  ComponentMask.hpp  Position2d.h  Sound.h  Volume2d.h
include/core/: FileManager.hpp  Game.h  GameConfig.h  SharedData.hpp
include/core/input/: Key.h
include/entity/: Entity.hpp  EntityHandle.hpp  EntityManager.hpp  EntityMap.hpp
include/graphics/: Camera.h  RenderComponent.h  RenderUpdater.h  Renderer.h  Sdl2RenderUpdater.h  Sdl2Renderer.h  Texture.h
include/input/: ButtonState.h  Input.h  InputComponent.h  InputData.h  InputEventType.h  InputManager.h  InputState.h  Key.h  KeyAction.h  KeyInput.h  KeyState.h  Sdl2Input.h
include/level/: Level.hpp  LevelManager.hpp
include/updater/: Updater.hpp  UpdaterFunction.h  UpdaterTemplate.h
include/window/: Sdl2Window.h  Window.h
include/world/: World.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: README.md  library.cpp  main.cpp
src/audio/: Audio.cpp
src/camera/: Camera.cpp  camera.cpp
src/component/: Cam.cpp  Component.cpp  ComponentMask.cpp  Position2d.cpp  Volume2d.cpp
src/core/: FileManager.cpp  Game.cpp  SharedData.cpp
src/core/graphics/: GL.cpp
src/entity/: EntityManager.cpp
src/graphics/: Camera.cpp  RenderComponent.cpp  Renderer.cpp  Sdl2RenderUpdater.cpp  Sdl2Renderer.cpp  Texture.cpp
src/input/: InputComponent.cpp  InputManager.cpp  Key.cpp  KeyInput.cpp  Sdl2Input.cpp
src/level/: Level.cpp  LevelManager.cpp
src/updater/: Updater.cpp
src/window/: Sdl2Window.cpp  Window.cpp
src/world/: World.cpp
test/: StateEnum.hpp  customComponents.hpp  demoMain.cpp  main.cpp
test/include/wrapper/: SDL2InputWrapper.h
test/src/wrapper/: SDL2InputWrapper.cpp
